# pipecat-light

./: .env.example  .gitignore  Makefile  bot.py  pyproject.toml  server.py
docs/: architecture.md  debugging.md  protocol.md  quickstart.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
static/: index.html
